--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ td {
 }
 
 #modal {
-    /* height: 500px; */
+    height: 300px;
     width: 500px;
     background-color: white;
     border-radius: 32px;
@@ -26,7 +26,7 @@ td {
 
 #modal-header {
     width: 100%;
-    /* height: 20%; */
+    height: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,7 +34,7 @@ td {
 
 #modal-main {
     width: 100%;
-    /* height: 60%; */
+    height: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,7 +42,7 @@ td {
 
 #modal-footer {
     width: 100%;
-    /* height: 20%; */
+    height: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
